[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screenplain"
version = "0.11.1"
description = "Convert text file to viewable screenplay."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Martin Vilcans", email = "screenplain@librador.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "reportlab>=4.4.7",
]

[project.urls]
"Homepage" = "http://www.screenplain.com/"
"Source" = "https://github.com/vilcans/screenplain"

[project.scripts]
screenplain = "screenplain.main:cli"
